--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <title>about me </title>
 <body>
 <h1>Afridi shaik </h1>
-<img width=80% src=afridi.jpg>
+<i>lives in POLURU ,a village near guntur</i>
+<img width=60% src=afridime.jpg>
 <h2>Greetings! I'm a Computer Science and Engineering (CSE) student embarking on a journey to unravel the mysteries of algorithms, coding, and innovative technologies. Fueled by a curiosity for artificial intelligence and software development, I aspire to be at the forefront of digital innovation. Let's code the future together!</h2>
 <i>my strengths are i am self motivated and i give my 100% to do work</i>
 </body>
